# i2s_soundcard_opener

./: CMakeLists.txt  Config.h.in  README.md  main.cpp
